@@ -92,6 +92,21 @@ enum wxWebViewFindFlags
     wxWEBVIEW_FIND_DEFAULT =          0
 };
 
+/**
+    Navigation action types.
+
+    @since 3.1.2
+*/
+enum wxWebViewNavigationActionFlags
+{
+    /** No navigation action */
+    wxWEBVIEW_NAV_ACTION_NONE,
+    /** The navigation was started by the user */
+    wxWEBVIEW_NAV_ACTION_USER,
+    /**The navigation was started but not by the user*/
+    wxWEBVIEW_NAV_ACTION_OTHER
+};
+
 
 /**
     @class wxWebViewHistoryItem
@@ -881,7 +896,8 @@ class wxWebViewEvent : public wxNotifyEvent
 public:
     wxWebViewEvent();
     wxWebViewEvent(wxEventType type, int id, const wxString href,
-                   const wxString target);
+                   const wxString target,
+                   wxWebViewNavigationActionFlags flags = wxWEBVIEW_NAV_ACTION_NONE);
 
     /**
         Get the name of the target frame which the url of this event
@@ -894,6 +910,14 @@ public:
         Get the URL being visited
     */
     const wxString& GetURL() const;
+
+    /**
+        Get the type of navigation action. Only valid for events of type
+        @c wxEVT_WEBVIEW_NEWWINDOW
+
+        @since 3.1.2
+    */
+    wxWebViewNavigationActionFlags GetNavigationAction() const;
 };
 
 
