@@ -80,7 +80,7 @@ static gboolean
 wxgtk_webview_webkit_navigation(WebKitWebView *,
                                 WebKitWebFrame *frame,
                                 WebKitNetworkRequest *request,
-                                WebKitWebNavigationAction *,
+                                WebKitWebNavigationAction *action,
                                 WebKitWebPolicyDecision *policy_decision,
                                 wxWebViewWebKit *webKitCtrl)
 {
@@ -92,10 +92,18 @@ wxgtk_webview_webkit_navigation(WebKitWebView *,
     if(webKitCtrl->m_creating)
     {
         webKitCtrl->m_creating = false;
+
+        WebKitWebNavigationReason reason =
+                                  webkit_web_navigation_action_get_reason(action);
+        wxWebViewNavigationActionFlags flags = wxWEBVIEW_NAV_ACTION_USER;
+
+        if(reason == WEBKIT_WEB_NAVIGATION_REASON_OTHER)
+            flags = wxWEBVIEW_NAV_ACTION_OTHER;
+
         wxWebViewEvent event(wxEVT_WEBVIEW_NEWWINDOW,
                              webKitCtrl->GetId(),
                              wxString(uri, wxConvUTF8),
-                             target);
+                             target, flags);
 
         webKitCtrl->HandleWindowEvent(event);
 
@@ -302,17 +310,24 @@ static gboolean
 wxgtk_webview_webkit_new_window(WebKitWebView*,
                                 WebKitWebFrame *frame,
                                 WebKitNetworkRequest *request,
-                                WebKitWebNavigationAction*,
+                                WebKitWebNavigationAction* action,
                                 WebKitWebPolicyDecision *policy_decision,
                                 wxWebViewWebKit *webKitCtrl)
 {
     const gchar* uri = webkit_network_request_get_uri(request);
-
     wxString target = webkit_web_frame_get_name (frame);
+
+    WebKitWebNavigationReason reason = webkit_web_navigation_action_get_reason(action);
+
+    wxWebViewNavigationActionFlags flags = wxWEBVIEW_NAV_ACTION_USER;
+
+    if(reason == WEBKIT_WEB_NAVIGATION_REASON_OTHER)
+        flags = wxWEBVIEW_NAV_ACTION_OTHER;
+
     wxWebViewEvent event(wxEVT_WEBVIEW_NEWWINDOW,
                                        webKitCtrl->GetId(),
                                        wxString( uri, wxConvUTF8 ),
-                                       target);
+                                       target, flags);
 
     webKitCtrl->HandleWindowEvent(event);
 
